examples/advanced/monitoring/k8s/11-statsd-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statsd-exporter
  namespace: nvflare-monitoring
  labels:
    app: statsd-exporter
spec:
  type: ClusterIP
  selector:
    app: statsd-exporter
  ports:
    - name: statsd-udp
      port: 9125
      protocol: UDP
      targetPort: statsd-udp
    - name: statsd-tcp
      port: 9125
      protocol: TCP
      targetPort: statsd-tcp
    - name: metrics
      port: 9102
      protocol: TCP
      targetPort: metrics
