examples/advanced/monitoring/k8s/22-prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: nvflare-monitoring
  labels:
    app: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: http
